--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -39,9 +39,29 @@
             android:id="@+id/txtEmailCheckResult"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
             android:text="이메일 중복검사를 해주세요." />
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="비밀번호" />
+
+        <EditText
+            android:id="@+id/edtPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="비밀번호 8자리 이상"
+            android:inputType="textPassword" />
+        <TextView
+            android:id="@+id/txtPasswordCheckResult1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="비밀번호를 다시 입력해주세요." />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,11 +69,18 @@
             android:text="비밀번호" />
 
         <EditText
-            android:id="@+id/edtPassword"
+            android:id="@+id/edtPasswordRepeat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="비밀번호"
+            android:hint="비밀번호 8자리 이상"
             android:inputType="textPassword" />
+        <TextView
+            android:id="@+id/txtPasswordCheckResult2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="비밀번호를 다시 입력해주세요." />
 
 
         <TextView
